Added example how to check method return types.
Signed-off-by: Peter Gafert <peter.gafert@tngtech.com>